--- a/ProAgil.WebAPI/appsettings.Development.json
+++ b/ProAgil.WebAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "Supper Secret Key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=ProAgil.db"
   },
